fix icon overspill on mobile

--- a/styles/main.css
+++ b/styles/main.css
@@ -100,7 +100,9 @@ td img {
 }
 
 @media only screen and (max-width: 920px) {
-
+    td p img{
+        position:relative;
+    }
     .tscroll{
         width: auto;
         overflow-x: scroll;
